Added check to ensure that either both upstream proxy hostname and port are set, or neither

--- a/src/webui/css/main.css
+++ b/src/webui/css/main.css
@@ -5405,7 +5405,8 @@ body[dir="rtl"] .vpn-incompatible-msg.label {
 .port-entry {
   width: 5em;
 }
-.local-port-unique {
+.local-port-unique,
+.upstream-proxy-set-match {
   color: #b94a48;
 }
 #EgressRegion {
