Fixed refreshing of UI settings

--- a/src/webui/css/main.css
+++ b/src/webui/css/main.css
@@ -35,6 +35,9 @@ body[dir="rtl"] .form-horizontal .form-actions {
     margin-right: -20px;
   }
 }
+body[dir="rtl"] .modal-footer {
+  text-align: left;
+}
 /*!
  * Bootstrap v2.3.2
  *
