--- a/src/webui/css/_rtl-support.less
+++ b/src/webui/css/_rtl-support.less
@@ -64,4 +64,10 @@ body[dir="rtl"] {
       margin-right: @gridGutterWidth * -1;
     }
   }
+
+  // See modals.less
+  .modal-footer {
+    // By default, the modal buttons are always right-aligned.
+    text-align: left;
+  }
 }
