--- a/src/webui/css/main.css
+++ b/src/webui/css/main.css
@@ -6121,63 +6121,6 @@ body[dir="rtl"] #EgressRegion .flag {
   background-image: url(../flag_unknown_32.png) !important;
   background-repeat: no-repeat;
 }
-/*
-// msDropdown fixes
-
-.dd {
-  body[dir="rtl"] & {
-    &.ddcommon .ddArrow{
-      left: 4px;
-      right: auto;
-    }
-
-    .divider{
-      border-right: 1px solid #c3c3c3;
-      border-left: 1px solid #fff;
-      left: 24px;
-      right: auto;
-    }
-  }
-
-  .ddChild li {
-    border-bottom: none;
-  }
-
-  .ddTitle .ddTitleText {
-    padding: 0 0 0 0;
-  }
-
-  .f32 .ddlabel {
-    line-height: 32px;
-  }
-}
-
-.dd {
-  .f16, .f32 {
-    & .flag {
-      margin: 0 5px 0 5px;
-      body[dir="ltr"] & {
-        float: left;
-      }
-      body[dir="rtl"] & {
-        float: right;
-      }
-    }
-  }
-}
-
-.f16 {
-  & .unknown{
-    background:url(../flag_unknown_16.png) no-repeat;
-  }
-}
-
-.f32 {
-  & .unknown{
-    background:url(../flag_unknown_32.png) no-repeat;
-  }
-}
-*/
 /* FEEDBACK */
 .feedback-smiley-container {
   margin-left: 5px;
@@ -6263,6 +6206,12 @@ body[dir="rtl"] .global-alert {
 }
 img {
   -ms-interpolation-mode: bicubic;
+}
+.control-group.dropdown-menu.error {
+  border-color: #d18a96;
+  -webkit-box-shadow: 0 5px 10px #d18a96;
+  -moz-box-shadow: 0 5px 10px #d18a96;
+  box-shadow: 0 5px 10px #d18a96;
 }
 /*
  * FONTS
