--- a/src/webui/css/_rtl-support.less
+++ b/src/webui/css/_rtl-support.less
@@ -65,9 +65,16 @@ body[dir="rtl"] {
     }
   }
 
-  // See modals.less
+  // See bootstrap:modals.less
   .modal-footer {
     // By default, the modal buttons are always right-aligned.
     text-align: left;
+  }
+
+  // See bootstrap:dropdowns.less
+  .dropdown-menu {
+    left: auto;
+    right: 0;
+    float: right;
   }
 }
