--- a/src/webui/css/main.less
+++ b/src/webui/css/main.less
@@ -24,9 +24,18 @@
 @psiSecondary: #9E8E5F;
 @psiTextOnPrimary: lighten(@psiPrimary, 70%);
 
+@brand-primary: @psiHighlight;
+@brand-success: #5cb85c;
+@brand-info: #5bc0de;
+@brand-warning: #f0ad4e;
+@brand-danger: #d9534f;
+
 
 @import "vendor/bootstrap-2.3.2/less/bootstrap.less";
 @import "vendor/bootstrap-2.3.2/less/responsive.less";
+
+@fa-var-check: "\f00c";
+@import "vendor/awesome-bootstrap-checkbox.less";
 
 
 html {
@@ -172,11 +181,11 @@ body {
 
 .tab-content {
   overflow: hidden;
+  padding-top: 1em;
 
   .tab-pane {
     height: 100%;
     overflow: auto;
-    padding-top: 1em;
 
     // Needed to fix IE7 position:relative+overflow bug
     position: relative;
