--- a/src/webui/css/main.less
+++ b/src/webui/css/main.less
@@ -410,9 +410,8 @@ body {
 /* LOG MESSAGES */
 
 .log-messages .priority-0 {
-  display: none;
-  .showing-priority-0& {
-    display: table-row;
+  .hiding-priority-0& {
+    display: none;
   }
 }
 
