--- a/src/webui/css/main.less
+++ b/src/webui/css/main.less
@@ -108,6 +108,12 @@ body {
         height: @headerBannerHeight;
       }
     }
+
+    &.long-connecting-show {
+      max-width: 400px;
+      margin: auto;
+      font-size: 0.9em;
+    }
   }
 
   .logo {
