--- a/src/webui/css/main.css
+++ b/src/webui/css/main.css
@@ -2287,9 +2287,9 @@ button.close {
   border: 1px solid #cccccc;
   *border: 0;
   border-bottom-color: #b3b3b3;
-  -webkit-border-radius: 1px;
-  -moz-border-radius: 1px;
-  border-radius: 1px;
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  border-radius: 5px;
   *margin-left: .3em;
   -webkit-box-shadow: inset 0 1px 0 rgba(255,255,255,.2), 0 1px 2px rgba(0,0,0,.05);
   -moz-box-shadow: inset 0 1px 0 rgba(255,255,255,.2), 0 1px 2px rgba(0,0,0,.05);
@@ -6148,28 +6148,23 @@ body {
   margin: 0;
   padding: 0;
   overflow-y: hidden;
-  /* Background pattern from subtlepatterns.com */
-  background-image: url(../background.png);
+  background-color: #f3f7fa;
 }
 * {
   outline: 0 !important;
 }
 /* HEADER AND NAV */
 .psiphon-header {
-  height: 70px;
-  background-color: #3a2319;
-}
-body[dir="ltr"] .psiphon-header {
-  padding: 10px 10px 10px 120px;
-}
-body[dir="rtl"] .psiphon-header {
-  padding: 10px 120px 10px 10px;
+  height: 90px;
+  background-color: #DA4D30;
+  padding: 0;
 }
 .psiphon-header .banner {
   height: 100%;
+  padding: 0.5em;
 }
 .psiphon-header .banner > div {
-  color: #ead7ce;
+  color: #ffffff;
 }
 .psiphon-header .banner > a {
   display: inline-block;
@@ -6177,26 +6172,43 @@ body[dir="rtl"] .psiphon-header {
   /* IE7 inline-block hack */
   *zoom: 1;
   background: #FFFFFF;
-  border: thin #160d0a solid;
+  border: thin #e6e6e6 solid;
 }
 .psiphon-header .banner > a img {
   height: 48px;
 }
 .psiphon-header .banner.long-connecting-show {
-  max-width: 400px;
-  margin: auto;
   font-size: 0.9em;
 }
-.psiphon-header .logo {
+.psiphon-header .banner.long-connecting-show div {
+  max-width: 400px;
+  margin: auto;
+}
+.psiphon-header .banner.long-connecting-show div a {
+  color: #ffffff;
+  font-weight: bold;
+  text-decoration: underline;
+}
+.psiphon-header .header-nav-join {
   position: absolute;
+  padding-top: 10px;
+  margin: 0;
+  height: 110px;
+  background-color: #ffffff;
 }
-body[dir="ltr"] .psiphon-header .logo {
-  left: 20px;
+body[dir="ltr"] .psiphon-header .header-nav-join {
+  float: left;
+  padding-left: 20px;
+  border-left: 5px solid #abc7dc;
+  border-right: none;
 }
-body[dir="rtl"] .psiphon-header .logo {
-  right: 20px;
+body[dir="rtl"] .psiphon-header .header-nav-join {
+  float: right;
+  padding-right: 20px;
+  border-right: 5px solid #abc7dc;
+  border-left: none;
 }
-.psiphon-header .logo img {
+.psiphon-header .header-nav-join img {
   height: 100px;
 }
 .nav,
@@ -6205,21 +6217,53 @@ body[dir="rtl"] .psiphon-header .logo {
   margin-bottom: 0;
 }
 .nav-tabs {
-  background-color: #3a2319;
+  background-color: #ffffff;
+}
+.nav-tabs.main-nav.nav {
+  border-width: 0;
+  margin: 0;
+}
+.nav-tabs #fill-tab {
+  height: 100%;
+}
+.nav-tabs > li {
+  margin: 0;
+}
+body[dir="ltr"] .nav-tabs > li {
+  border-right: none;
+  border-left: 5px solid #abc7dc;
+}
+body[dir="rtl"] .nav-tabs > li {
+  border-left: none;
+  border-right: 5px solid #abc7dc;
+}
+body[dir="ltr"] .nav-tabs > li.active {
+  border-right: none;
+  border-left-color: #376384;
+}
+body[dir="rtl"] .nav-tabs > li.active {
+  border-left: none;
+  border-right-color: #376384;
 }
 .nav-tabs > li > a {
   outline: none;
-  color: #ffffff;
+  border: none;
+  margin: 0 !important;
+  color: #3a3a3a;
+  font-weight: bold;
+  text-transform: uppercase;
+  transition: background-color 300ms, color 300ms;
 }
 .nav-tabs > li > a:hover,
 .nav-tabs > li > a:focus {
-  color: #3a2319;
-  background-color: #d8d1be;
+  color: #ffffff;
+  background-color: #376384;
 }
 .nav-tabs > .active > a,
 .nav-tabs > .active > a:hover,
 .nav-tabs > .active > a:focus {
   outline: none;
+  border: none;
   color: #ffffff;
   background-color: #d43f27;
 }
@@ -6247,13 +6291,8 @@ body[dir="rtl"] .main-nav .multiline-tab-icon {
 .tab-content .tab-pane {
   height: 100%;
   overflow: auto;
+  padding: 0 1em;
   position: relative;
-}
-body[dir="ltr"] .tab-content .tab-pane {
-  padding-right: 1em;
-}
-body[dir="rtl"] .tab-content .tab-pane {
-  padding-left: 1em;
 }
 .tab-pane.fade {
   -moz-transition: opacity 0.1s linear;
@@ -6266,22 +6305,75 @@ body[dir="rtl"] .tab-content .tab-pane {
   max-width: 600px;
   position: relative;
   padding: 0;
-  margin: auto;
   top: 10%;
 }
 #connect-toggle > .connect-toggle-content {
   position: absolute;
   top: 0;
-  width: 70%;
-  padding: 20px;
   margin: auto;
   overflow: hidden;
+  padding: 30px 15%;
+  width: 70%;
+  background-color: #ffffff;
+  text-transform: uppercase;
 }
-body[dir="ltr"] #connect-toggle > .connect-toggle-content {
-  left: 10%;
+#connect-toggle > .connect-toggle-content .state-symbol {
+  font-size: 3em;
+  margin-bottom: 0.5em;
 }
-body[dir="rtl"] #connect-toggle > .connect-toggle-content {
-  right: 10%;
+#connect-toggle > .connect-toggle-content .state-symbol .icon-state-symbol {
+  color: #ffffff;
+}
+body[dir="ltr"] #connect-toggle > .connect-toggle-content .state-symbol i {
+  *margin-left: -1em;
+}
+body[dir="rtl"] #connect-toggle > .connect-toggle-content .state-symbol i {
+  *margin-right: -1em;
+}
+#connect-toggle > .connect-toggle-content[data-connect-state="starting"] i,
+#connect-toggle > .connect-toggle-content[data-connect-state="starting"] .state-word {
+  color: #f0ad4e;
+}
+#connect-toggle > .connect-toggle-content[data-connect-state="starting"] .btn {
+  color: #ffffff;
+  background: #d9534f;
+}
+#connect-toggle > .connect-toggle-content[data-connect-state="starting"] .icon-stack-base.in-progress,
+#connect-toggle > .connect-toggle-content[data-connect-state="starting"] .state-word.in-progress {
+  color: #5cb85c;
+}
+#connect-toggle > .connect-toggle-content[data-connect-state="connected"] i,
+#connect-toggle > .connect-toggle-content[data-connect-state="connected"] .state-word {
+  color: #5cb85c;
+}
+#connect-toggle > .connect-toggle-content[data-connect-state="connected"] .btn {
+  color: #ffffff;
+  background: #d9534f;
+}
+#connect-toggle > .connect-toggle-content[data-connect-state="stopping"] i,
+#connect-toggle > .connect-toggle-content[data-connect-state="stopping"] .state-word {
+  color: #f0ad4e;
+}
+#connect-toggle > .connect-toggle-content[data-connect-state="stopping"] .btn {
+  color: #ffffff;
+  background: #f0ad4e;
+}
+#connect-toggle > .connect-toggle-content[data-connect-state="stopping"] .icon-stack-base.in-progress,
+#connect-toggle > .connect-toggle-content[data-connect-state="stopping"] .state-word.in-progress {
+  color: #d9534f;
+}
+#connect-toggle > .connect-toggle-content[data-connect-state="stopped"] i,
+#connect-toggle > .connect-toggle-content[data-connect-state="stopped"] .state-word {
+  color: #d9534f;
+}
+#connect-toggle > .connect-toggle-content[data-connect-state="stopped"] .btn {
+  color: #ffffff;
+  background: #5cb85c;
+}
+#connect-toggle > .connect-toggle-content hr {
+  width: 70%;
+  margin-left: auto;
+  margin-right: auto;
 }
 #connect-toggle .slabtext-container {
   height: 50px;
@@ -6373,7 +6465,7 @@ body[dir="rtl"] .vpn-incompatible-msg.label {
 }
 #EgressRegionCombo > a {
   padding: 0;
-  background: none;
+  background-color: #ffffff;
 }
 #EgressRegionCombo > a i {
   padding: 0.5em;
@@ -6508,6 +6600,18 @@ img {
   -webkit-box-shadow: 0 5px 10px #d18a96;
   -moz-box-shadow: 0 5px 10px #d18a96;
   box-shadow: 0 5px 10px #d18a96;
+}
+hr.dotted {
+  height: 3px;
+  background-image: linear-gradient(to right, #666666 15%, rgba(255, 255, 255, 0) 0%);
+  background-position: top;
+  background-size: 14px 2px;
+  background-repeat: repeat-x;
+  border-top-style: none;
+  border-top-color: #333;
+  border-top-width: 2px;
+  border-bottom-style: none;
+  border-bottom-width: 0px;
 }
 /*
  * FONTS
