Added more space above nav tabs

--- a/src/webui/css/main.less
+++ b/src/webui/css/main.less
@@ -77,7 +77,7 @@ body {
 @headerLogoMarginTop: 10px;
 // By default the nav top is at @headerHeight, but we want it to be below the
 // bottom of the logo image (with pad).
-@navTopPad: ((@headerLogoHeight + @headerLogoMarginTop) - @headerHeight + @headerLogoMarginTop);
+@navTopPad: ((@headerLogoHeight + @headerLogoMarginTop) - @headerHeight + @headerLogoMarginTop + 30px);
 @headerBannerTopMargin: (@headerHeight - @headerBannerHeight) / 2;
 
 @navLeftBorderColor: darken(@psiNeutral, 20%);
